# tree-sitter-fe

./: .source-commit  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: sync.yml
bindings/c/: tree-sitter-fe.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_fe/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterFeTests/: TreeSitterFeTests.swift
queries/: outline.scm
scripts/: mirror-releases.sh  sync-from-fe.sh
src/: grammar.json  node-types.json  parser.c  scanner.c
